--- a/site/cronograma/parteUm.html
+++ b/site/cronograma/parteUm.html
@@ -12,7 +12,7 @@
 <body>
     <meu-header></meu-header>
     <div class="container">
-        <div class="title"><a href="cronograma.html" style="font-size: xx-large">&larr; </a>
+        <div class="title"><a href="InfoSec-iniciante/site/cronograma/cronograma.html" style="font-size: xx-large">&larr; </a>
             <p>Cronograma: Parte I_</p>
         </div>
         <p>Comecei meus estudos com Bash e Redes, seguindo o Roadmap.</p>
