--- a/site/cronograma/cronograma.html
+++ b/site/cronograma/cronograma.html
@@ -25,8 +25,8 @@
         ajuda muito.
       </p>
       <h2>Conteúdo_</h2>
-      <h3>Parte I → <a href="/InfoSec-iniciante/site/cronograma/cronograma.html/parteUm.html">Bash e Redes&#x2197;</a></h3>
-      <h3>Parte II → <a href="/InfoSec-iniciante/site/cronograma/cronograma.html/web.html">Web&#x2197;</a></h3>
+      <h3>Parte I → <a href="/InfoSec-iniciante/site/cronograma/parteUm.html">Bash e Redes&#x2197;</a></h3>
+      <h3>Parte II → <a href="/InfoSec-iniciante/site/cronograma/web.html">Web&#x2197;</a></h3>
       <h4>
         parte III →
         <a
