--- a/site/cronograma/cronograma.html
+++ b/site/cronograma/cronograma.html
@@ -27,18 +27,25 @@
       <h2>Conteúdo_</h2>
       <h3>Parte I → <a href="/InfoSec-iniciante/site/cronograma/parteUm.html">Bash e Redes&#x2197;</a></h3>
       <h3>Parte II → <a href="/InfoSec-iniciante/site/cronograma/web.html">Web&#x2197;</a></h3>
-      <h4>
+      <h3>
         parte III →
         <a
           href="https://github.com/rayanepimentel/InfoSec-iniciante/tree/main/OWASP"
           >OWASP&#x2197;</a
         >
-      </h4>
+      </h3>
       <h3>
         Parte IV →
         <a
           href="https://github.com/rayanepimentel/InfoSec-iniciante/blob/main/devSecOps/pipeline.md"
           >DevSecOps&#x2197;</a
+        >
+      </h3>
+      <h3>
+        Parte V →
+        <a
+          href="InfoSec-iniciante/cursos/"
+          >Cursos&#x2197;</a
         >
       </h3>
       <!-- .btn!= tw('Cronograma de estudo da Infosec iniciante: ')-->
