--- a/site/cronograma/cronograma.html
+++ b/site/cronograma/cronograma.html
@@ -40,7 +40,10 @@
     </h3>
     <h3>
       Parte V →
-      <a href="InfoSec-iniciante/cursos/">Cursos&#x2197;</a>
+      <a
+          href="https://rayanepimentel.github.io/InfoSec-iniciante/cursos/"
+          >issue&#x2197;</a
+        >.
     </h3>
     <!-- .btn!= tw('Cronograma de estudo da Infosec iniciante: ')-->
     <!-- .btn!=linkedin('/cronograma/index')-->
