--- a/site/cronograma/cronograma.html
+++ b/site/cronograma/cronograma.html
@@ -42,7 +42,7 @@
       Parte V →
       <a
           href="https://rayanepimentel.github.io/InfoSec-iniciante/cursos/"
-          >issue&#x2197;</a
+          >Cursos&#x2197;</a
         >.
     </h3>
     <!-- .btn!= tw('Cronograma de estudo da Infosec iniciante: ')-->
