--- a/site/cronograma/cronograma.html
+++ b/site/cronograma/cronograma.html
@@ -36,7 +36,7 @@
     <h3>
       Parte IV →
       <a
-        href="https://github.com/rayanepimentel/InfoSec-iniciante/blob/main/devSecOps/pipeline.md">DevSecOps&#x2197;</a>
+        href="https://rayanepimentel.github.io/InfoSec-iniciante/devSecOps/">DevSecOps&#x2197;</a>
     </h3>
     <h3>
       Parte V →
