--- a/site/cronograma/cronograma.html
+++ b/site/cronograma/cronograma.html
@@ -31,7 +31,7 @@
     <h3>Parte II → <a href="/InfoSec-iniciante/site/cronograma/web.html">Web&#x2197;</a></h3>
     <h3>
       parte III →
-      <a href="https://github.com/rayanepimentel/InfoSec-iniciante/tree/main/OWASP">OWASP&#x2197;</a>
+      <a href="https://rayanepimentel.github.io/InfoSec-iniciante/OWASP/owasp.html">OWASP&#x2197;</a>
     </h3>
     <h3>
       Parte IV →
