--- a/site/index.html
+++ b/site/index.html
@@ -20,7 +20,8 @@ Obrigada ˆ ˆ
     <link rel="stylesheet" href="./public/estilo.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <title>Document</title>
+    <link rel="icon" href="./public/imagens/fav.svg" type="image/svg+xml" />
+    <title>Infosec Iniciante</title>
     <script src="./public/header.js" defer></script>
 </head>
 
