--- a/site/papers/papers.html
+++ b/site/papers/papers.html
@@ -33,7 +33,7 @@
                     <div class="card-meta">
                         <div class="meta-item">
                             <span class="meta-label">Autores:</span>
-                            <span>Seu Nome, Co-autor</span>
+                            <span>Rayane Pimentel, Claudia Bianchi Progetti </span>
                         </div>
                         <div class="meta-item">
                             <span class="meta-label">Publicado em:</span>
@@ -49,27 +49,6 @@
                     </a>
                 </div>
 
-                <div class="publication-card">
-                    <span class="card-type">Artigo</span>
-                    <h4 class="card-title">Título do segundo artigo exemplo</h4>
-                    <div class="card-meta">
-                        <div class="meta-item">
-                            <span class="meta-label">Autores:</span>
-                            <span>Nome Autor 1, Nome Autor 2</span>
-                        </div>
-                        <div class="meta-item">
-                            <span class="meta-label">Publicado em:</span>
-                            <span>Conferência Exemplo 2025</span>
-                        </div>
-                        <div class="meta-item">
-                            <span class="meta-label">Ano:</span>
-                            <span>2025</span>
-                        </div>
-                    </div>
-                    <a href="#" target="_blank" class="pub-link">
-                        Acessar publicação &#x2197;
-                    </a>
-                </div>
             </div>
         </section>
 
@@ -83,21 +62,9 @@
             <div id="leituras-content" class="section-content" style="display: none;">
                 <ul class="reading-list">
                     <li class="reading-item">
-                        <a href="#" target="_blank" class="reading-link">
+                        <a href="/nist/nist-800-115.md" target="_blank" class="reading-link">
                             <span class="reading-title">NIST SP 800-115 - Technical Guide to Information Security Testing &#x2197;</span>
-                            <span class="reading-source">NIST - National Institute of Standards and Technology</span>
-                        </a>
-                    </li>
-                    <li class="reading-item">
-                        <a href="#" target="_blank" class="reading-link">
-                            <span class="reading-title">Título da leitura ou livro recomendado &#x2197;</span>
-                            <span class="reading-source">Autor - Editora, 2024</span>
-                        </a>
-                    </li>
-                    <li class="reading-item">
-                        <a href="#" target="_blank" class="reading-link">
-                            <span class="reading-title">Outra leitura importante na área &#x2197;</span>
-                            <span class="reading-source">Nome do Autor - Revista Científica, 2023</span>
+                            <span class="reading-source">Resumo</span>
                         </a>
                     </li>
                 </ul>
