--- a/site/papers/papers.html
+++ b/site/papers/papers.html
@@ -62,7 +62,7 @@
             <div id="leituras-content" class="section-content" style="display: none;">
                 <ul class="reading-list">
                     <li class="reading-item">
-                        <a href="/nist/nist-800-115.md" target="_blank" class="reading-link">
+                        <a href="InfoSec-iniciante/nist/nist-800-115" target="_blank" class="reading-link">
                             <span class="reading-title">NIST SP 800-115 - Technical Guide to Information Security Testing &#x2197;</span>
                             <span class="reading-source">Resumo</span>
                         </a>
